--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,24 +62,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\EventArgs.cs" />
-    <Compile Include="Assets\Scripts\EventMgr.cs" />
-    <Compile Include="Assets\Scripts\EventType.cs" />
-    <Compile Include="Assets\Scripts\Functor.cs" />
-    <Compile Include="Assets\Scripts\HotKeyMgr.cs" />
-    <Compile Include="Assets\Scripts\MainManager.cs" />
-    <Compile Include="Assets\Scripts\ObjectBehaviour.cs" />
-    <Compile Include="Assets\Scripts\ObjectBehaviourMgr.cs" />
-    <Compile Include="Assets\Scripts\Singleton.cs" />
-    <Compile Include="Assets\Scripts\Timer.cs" />
-    <Compile Include="Assets\Scripts\TransformExtAPI.cs" />
-    <Compile Include="Assets\TestScaleTime.cs" />
+    <Compile Include="Assets\TestScripts\TestCoroutine.cs" />
     <Compile Include="Assets\TestScripts\TestCountTime.cs" />
     <Compile Include="Assets\TestScripts\TestEvent.cs" />
     <Compile Include="Assets\TestScripts\TestFunctor.cs" />
     <Compile Include="Assets\TestScripts\TestLinkedList.cs" />
     <Compile Include="Assets\TestScripts\TestMonoSingleton.cs" />
     <Compile Include="Assets\TestScripts\TestObjectBehaviour.cs" />
+    <Compile Include="Assets\TestScripts\TestScaleTime.cs" />
     <Compile Include="Assets\TestScripts\TestSingleton.cs" />
     <Compile Include="Assets\TestScripts\TestTagAndDontDestroy.cs" />
     <Compile Include="Assets\TestScripts\TestTimer.cs" />
@@ -644,6 +634,12 @@
     <Reference Include="System.Xml.Serialization">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.1f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{CF9C00A2-0D28-B872-2EAC-2669BC7EC17E}</Project>
+      <Name>Assembly-CSharp-firstpass</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
