--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,15 @@
 #
 *.vs
 .vs
+*.csproj
 # Get latest from 
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
+[Ll]ibrary
+[Tt]emp
+[Oo]bj
+[Bb]uild
+[Bb]uilds
+[Ll]ogs
+[Mm]emoryCaptures
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
@@ -59,3 +60,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 .vs/UnityPublic/v15/.suo
+Assets/Editor.meta
+Assembly-CSharp-firstpass.csproj
